kubernetes/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: wanderpeak

spec:
  type: ClusterIP

  selector:
    app: wanderpeak

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
